--- a/src/pages/Plugin-SBT-Settings/index.module.less
+++ b/src/pages/Plugin-SBT-Settings/index.module.less
@@ -620,6 +620,7 @@
 			}
 			
 			&:last-child {
+				padding-left: 30px;
 				border-radius: 0 12px 12px 0;
 			}
 			
@@ -657,6 +658,10 @@
 				font-size: 14px;
 				color: #313436;
 				user-select: none;
+			}
+			
+			&:nth-child(3){
+				width: 1800px;
 			}
 			
 			&:nth-child(2) {
@@ -714,6 +719,7 @@
 }
 
 .amount-section {
+	display: flex;
 	:global {
 		//.ant-input-affix-wrapper {
 		//	width: 100px;
@@ -1182,6 +1188,7 @@
 	font-size: 16px;
 	cursor: pointer;
 	color: #0070F3;
+	margin-left: 15px;
 }
 
 
