--- a/src/pages/Test/Notification/index.module.less
+++ b/src/pages/Test/Notification/index.module.less
@@ -1,9 +1,8 @@
-.notifi:global(.ant-notification-notice){
+:global(.ant-notification-notice){
 	display: flex;
 	padding: 16px;
 	width: 822px;
 	height: 72px;
-	left: calc(50% - 822px/2 + 131.5px);
 
 	background: rgba(49, 52, 54, 0.7);
 	border-radius: 12px;
@@ -13,6 +12,12 @@
 	}
 }
 
+
+
+:global(.ant-notification-notice){
+	background-color: red;
+	
+}
 
 
 .wrapper {
