--- a/packages/overseas-payment-merchant-background-admin/src/pages/Login/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Login/index.module.less
@@ -9,21 +9,22 @@
 	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	background-color: skyblue;
+	min-height: 700px;
+	background-image: url(../../../public/statics/login-background.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .login-content{
 	display: flex;
 	flex-direction: column;
 	width: 368px;
-	background-color: pink;
 	gap: 44px;
 }
 
 .login-title{
 	display: flex;
 	justify-content: center;
-	align-items: center;
 }
 
 .sign-in-form-wrapper{
@@ -33,4 +34,57 @@
 	border-radius: 20px;
 	width: 100%;
 	background-color: #FFFF;
+	padding: 24px 0px;
+	gap: 32px;
+	
+	:global{
+		.ant-input{
+			width: 320px;
+			height: 48px;
+		}
+		
+		.ant-btn{
+			width: 320px;
+			height: 48px;
+		}
+	}
+}
+
+.form-title{
+	font-size: 18px;
+	font-weight: 600;
+	color: #171725;
+}
+
+.input-section{
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+.account-input{
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.account-input-title{
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 22px;
+	color: #16161A;
+}
+
+
+.password-input{
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.password-input-title{
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 22px;
+	color: #16161A;
 }
