--- a/packages/overseas-payment-merchant-background-admin/src/pages/login/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/login/index.module.less
@@ -41,11 +41,16 @@
 		.ant-input{
 			width: 320px;
 			height: 48px;
+			border-radius: 16px;
+			background: rgba(22, 22, 26, 0.04);
 		}
 		
 		.ant-btn{
 			width: 320px;
 			height: 48px;
+			border-radius: 10px;
+			font-weight: 600;
+			font-size: 16px;
 		}
 	}
 }
