--- a/packages/overseas-payment-merchant-background-admin/src/pages/user-info/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/user-info/index.module.less
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: fit-content;
 	padding: 24px 0;
-	background: pink;
+	background: #FFFF;
 }
 
 
@@ -12,7 +12,7 @@
 	flex-direction: column;
 	width: 100%;
 	margin-left: 24px;
-	background-color: white;
+	background-color: #FFFF;
 }
 
 .reset-password-container{
@@ -25,11 +25,15 @@
 		.ant-input{
 			width: 464px;
 			height: 48px;
+			background: rgba(22, 22, 26, 0.04);
+			border-radius: 16px;
 		}
 		
 		.ant-btn{
 			width: 96px;
 			height: 40px;
+			background: #0070F3;
+			border-radius: 12px;
 		}
 	}
 }
@@ -39,7 +43,30 @@
 	flex-direction: column;
 }
 
+.title{
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 24px;
+	color: #000;
+	margin-bottom: 4px;
+}
+
+.hint{
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 16px;
+	color: rgba(22, 22, 26, 0.6);
+}
+
 .form-container{
 	display: flex;
 	flex-direction: column;
+}
+
+.form-title{
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 22px;
+	color: #16161a;
+	margin-bottom: 8px;
 }
