完成订单数据静态页面

--- a/packages/overseas-payment-merchant-background-admin/src/pages/user-info/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/user-info/index.module.less
@@ -10,7 +10,7 @@
 .user-setting-content{
 	display: flex;
 	flex-direction: column;
-	width: 100%;
+	width: fit-content;
 	margin-left: 24px;
 	background-color: #FFFF;
 }
@@ -27,6 +27,7 @@
 			height: 48px;
 			background: rgba(22, 22, 26, 0.04);
 			border-radius: 16px;
+			border: unset;
 		}
 		
 		.ant-btn{
@@ -70,3 +71,7 @@
 	color: #16161a;
 	margin-bottom: 8px;
 }
+
+
+
+
