--- a/packages/overseas-payment-merchant-background-admin/src/pages/User-Info/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/User-Info/index.module.less
@@ -70,3 +70,15 @@
 	color: #16161a;
 	margin-bottom: 8px;
 }
+
+.base-info {
+	.info-item {
+		display: flex;
+		margin: 24px 0;
+		
+		:first-child {
+			font-weight: 500;
+			font-size: 14px;
+		}
+	}
+}
