--- a/packages/overseas-payment-merchant-background-admin/src/pages/User-Info/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/User-Info/index.module.less
@@ -75,10 +75,20 @@
 	.info-item {
 		display: flex;
 		margin: 24px 0;
+		align-items: baseline;
+	
+		p {
+			margin: 0;
+		}
+		.declare {
+			font-size: 12px;
+			font-weight: 400;
+		}
 		
 		:first-child {
 			font-weight: 500;
 			font-size: 14px;
 		}
 	}
+	
 }
