--- a/packages/overseas-payment-merchant-background-admin/src/pages/home-page/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/home-page/index.module.less
@@ -8,7 +8,7 @@
 	background-color: gainsboro;
 }
 
-.over-view-container{
+.overview-container{
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -17,9 +17,25 @@
 	width: 100%;
 	background: #FFFFFF;
 	border-radius: 8px;
+	
+	:global{
+		.ant-btn{
+			width: 97px;
+			height: 32px;
+			background: #1677FF;
+			border-radius: 4px;
+		}
+	}
 }
 
-.over-view-content{
+.overview-title{
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 24px;
+	color: #16161A;
+}
+
+.overview-content{
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
@@ -37,6 +53,20 @@
 	flex-direction: column;
 }
 
+.overview-sub-title{
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 140%;
+	color: rgba(22, 22, 26, 0.6);
+}
+
+.balance-amount{
+	font-weight: 500;
+	font-size: 48px;
+	line-height: 61px;
+	color: #16161A;
+}
+
 .check-detail{
 	font-weight: 500;
 	font-size: 13px;
@@ -48,6 +78,13 @@
 .withdraw-content{
 	display: flex;
 	flex-direction: column;
+}
+
+.withdrawing-amount{
+	font-weight: 500;
+	font-size: 28px;
+	line-height: 140%;
+	color: #16161A;
 }
 
 .order-type-overview{
