--- a/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
@@ -1,5 +1,5 @@
 .content-wrap {
-	background-color : #C2C2C2;
+	background-color : rgb(245,245,245);
 	height : calc(100vh - 48px);
 	overflow-y : hidden;
 	
