--- a/packages/overseas-payment-merchant-background-admin/src/pages/Login/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Login/index.module.less
@@ -8,7 +8,7 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	min-height: 700px;
 	background-image: url(../../../public/statics/login-background.png);
 	background-repeat: no-repeat;
