--- a/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
@@ -12,7 +12,7 @@
 	margin-bottom: 20px;
 	
 	:global{
-		.ant-btn{
+		.ant-btn.ant-btn-primary{
 			width: 97px;
 			height: 32px;
 			background: #1677FF;
@@ -36,7 +36,6 @@
 
 .balance-container{
 	display: flex;
-	flex-direction: row;
 	align-items: flex-end;
 	gap: 24px;
 }
@@ -62,10 +61,7 @@
 
 .check-detail{
 	font-weight: 500;
-	font-size: 13px;
-	line-height: 36px;
 	color: #1677FF;
-	cursor: pointer;
 }
 
 .withdraw-content{
@@ -181,34 +177,32 @@
 	align-items: flex-end;
 }
 
-.withdraw-window{
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+.withdraw-window:global(.ant-modal .ant-modal-content){
 	padding: 32px;
-	gap: 16px;
-	width: 380px;
-	background: #FFFFFF;
 	border-radius: 20px;
+}
+
+.withdraw-window:global(.ant-modal .ant-modal-header) {
+	border-radius: 20px 20px 0 0;
+	border-bottom: 0;
+	font-weight: 600;
+	font-size: 22px;
+	padding: 0;
+	padding-bottom: 16px;
+}
+
+.withdraw-window:global(.ant-modal .ant-modal-body) {
+	padding: 0;
 }
 
 .window-content{
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
-	padding: 0px;
 	gap: 24px;
-	width: 100%;
 }
 
 .withdraw-amount{
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	padding: 0px;
 	gap: 8px;
-	width: 100%;
-	
 	:global{
 		.ant-btn{
 			color: #0070F3;
@@ -216,13 +210,18 @@
 	}
 }
 
-.address{
+.address {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	padding: 0px;
 	gap: 8px;
-	width: 100%;
+	font-size: 14px;
+	font-weight: 500;
+	
+	:first-child {
+		font-weight: 600;
+	}
 }
 
 .btn{
@@ -231,7 +230,6 @@
 	align-items: flex-start;
 	padding: 0px;
 	gap: 14px;
-	width: 100%;
 	
 	:global{
 		.ant-btn{
