--- a/packages/overseas-payment-merchant-background-admin/src/pages/order-info/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/order-info/index.module.less
@@ -2,32 +2,19 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 100vh;
-	padding: 24px;
+	height: fit-content;
 	gap: 24px;
-	background-color: whitesmoke;
+	background-color: #c2c2c2;
 }
 
-.search-container{
+.search-container {
 	display: flex;
 	flex-direction: column;
 	padding: 24px;
-	background-color: #FFF;
+	background-color: #ffffff;
 	border-radius: 8px;
+	margin-bottom: 24px;
 	
-	:global{
-		.ant-form-inline{
-			gap: 16px;
-		}
-		
-		.ant-form-item{
-			width: 575px;
-		}
-		
-		.ant-picker-range{
-			width: 100%;
-		}
-	}
 }
 
 .form-btn{
