--- a/packages/overseas-payment-merchant-background-admin/src/pages/--Components--/Layout-Header/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/--Components--/Layout-Header/index.module.less
@@ -29,10 +29,32 @@
 			.selector {
 				color: #fff;
 			}
+			
+			.user-info{
+				display: flex;
+				align-items: center;
+				gap: 8px;
+				color: #ffffff;
+				cursor: pointer;
+			}
+			
+		
 		}
 	}
 }
 
 .selector:global(.ant-select.ant-select-show-arrow .ant-select-arrow) {
 	color: #fff !important;
+}
+
+.reset-pwd{
+	display: flex;
+	align-items: center;
+	gap: 6px;
+}
+
+.logout{
+	display: flex;
+	align-items: center;
+	gap: 8px;
 }
