--- a/packages/overseas-payment-merchant-background-admin/src/pages/Order-Info/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Order-Info/index.module.less
@@ -9,20 +9,46 @@
 
 .search-container {
 	display: flex;
-	flex-direction: column;
+	gap: 16px;
 	padding: 24px;
 	background-color: #ffffff;
 	border-radius: 8px;
 	margin-bottom: 24px;
 	
+	.input{
+		width: 100%;
+	}
+	
+	.date-picker{
+		width: 100%;
+		
+		:global{
+			.ant-picker.ant-picker-range{
+				width: 100%;
+			}
+		}
+	}
+	
+	.select{
+		width: 100%;
+		
+		
+		:global{
+			.ant-select{
+				width: 100%;
+			}
+		}
+	}
+	
+	.form-btn{
+		width: 30%;
+		display: flex;
+		gap: 16px;
+		justify-content: flex-end;
+	}
 }
 
-.form-btn{
-	width: 100%;
-	display: flex;
-	gap: 16px;
-	justify-content: flex-end;
-}
+
 
 .table-container{
 	width: 100%; 
