css样式修改，静态页面调整

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
@@ -257,11 +257,17 @@
 }
 
 .withdraw-amount{
+	display: flex;
+	flex-direction: column;
 	gap: 8px;
-	:global{
-		.ant-btn{
-			color: #0070F3;
-		}
+	
+	.withdraw-btn{
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 16px;
+		color: #0070F3;
+		margin-left: 8px;
+		cursor: pointer;
 	}
 }
 
@@ -276,6 +282,14 @@
 	
 	:first-child {
 		font-weight: 600;
+	}
+	
+	.set-btn{
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 16px;
+		color: #0070F3;
+		cursor: pointer;
 	}
 }
 
