--- a/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
@@ -75,7 +75,7 @@
 	.info-item {
 		display: flex;
 		margin: 24px 0;
-		align-items: baseline;
+		align-items: center;
 	
 		p {
 			margin: 0;
@@ -89,6 +89,19 @@
 			font-weight: 500;
 			font-size: 14px;
 		}
+		
+		svg{
+			margin-left: 4px;
+			cursor: pointer;
+		}
+	}
+	
+	.base-info-title{
+		font-weight: 500;
+		font-size: 18px;
+		line-height: 24px;
+		color: #000000;
+		margin-bottom: 24px;
 	}
 	
 }
