--- a/packages/overseas-payment-merchant-background-admin/src/pages/Collection-Order/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Collection-Order/index.module.less
@@ -72,18 +72,6 @@
 	gap: 6px;
 }
 
-.order-process-container{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 32px;
-	gap: 24px;
-	width: 480px;
-	background-color: #ffffff;
-	border-radius: 20px;
-}
-
 .order-process-title{
 	display: flex;
 	width: 100%;
@@ -92,5 +80,34 @@
 	font-weight: 600;
 	font-size: 22px;
 	color: #222528;
+	margin-bottom: 24px;
 	
+	.closeBtn{
+		display: flex;
+		align-items: center;
+		
+		svg{
+			cursor: pointer;
+		}
+	}
+	
+
+}
+
+
+.processing-modal:global(.ant-modal .ant-modal-content){
+	padding: 32px;
+	border-radius: 20px;
+}
+
+.processing-modal:global(.ant-modal .ant-modal-body){
+	padding: 0;
+}
+
+.processing-modal{
+	:global{
+		.ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-description{
+			color: rgba(0, 0, 0, 0.45);
+		}
+	}
 }
