商戶信息页面设置弹窗样式修改

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
@@ -105,3 +105,55 @@
 	}
 	
 }
+
+.set-api-modal:global(.ant-modal .ant-modal-content){
+	padding: 32px;
+	border-radius: 20px;
+}
+
+.set-api-modal:global(.ant-modal .ant-modal-header){
+	border-bottom: 0;
+	padding: 0;
+	padding-bottom: 16px;
+	font-weight: 600;
+	font-size: 22px;
+	line-height: 28px;
+	color: #222528;
+}
+
+.set-api-modal:global(.ant-modal .ant-modal-body){
+	padding: 0;
+}
+
+.setApiModalContainer{
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	
+	.input-form{
+		display: flex;
+		flex-direction: column;
+		
+		.desc{
+			font-weight: 500;
+			font-size: 13px;
+			line-height: 16px;
+			color: rgba(22, 22, 26, 0.8);
+		}
+		
+		:global{
+			.ant-input{
+				margin-bottom: 8px;
+				margin-top: 8px;
+			}
+		}
+	}
+	
+	.btn-section{
+		display: flex;
+		flex-direction: column;
+		gap: 14px;
+	}
+	
+}
+
