--- a/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
@@ -306,3 +306,21 @@
 		}
 	}
 }
+
+
+
+.table-container{
+	width: 100%;
+	padding: 24px;
+	background-color: #ffffff;
+	border-radius: 8px;
+}
+
+.table-header{
+	display: flex;
+	justify-content: flex-start;
+	margin-bottom: 17px;
+	font-weight: 500;
+	font-size: 18px;
+	color: #000000;
+}
