--- a/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
@@ -1,15 +1,21 @@
+.table-container{
+	width: 100%;
+	padding: 24px;
+	background-color: #ffffff;
+	border-radius: 8px;
+}
 
 .header-container{
 	display: flex;
 	justify-content: space-between;
 	background-color: #ffffff;
-	margin-bottom: 17px;
+	margin-bottom: 16px;
 	
 	:global{
 		.ant-btn{
 			display: flex;
 			align-items: center;
-			width: 130px;
+			padding: 0 17px;
 			height: 40px;
 			background: #0070F3;
 			border-radius: 12px;
@@ -19,17 +25,9 @@
 }
 
 .header-title{
-	font-weight: 500;
 	font-size: 18px;
 	line-height: 24px;
 	color: #000000;
-}
-
-.table-container{
-	width: 100%;
-	padding: 24px;
-	background-color: #ffffff;
-	border-radius: 8px;
 }
 
 .table-action{
