--- a/packages/overseas-payment-merchant-background-admin/src/pages/login/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/login/index.module.less
@@ -1,8 +1,3 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-
 .login-wrapper{
 	display: flex;
 	align-items: center;
@@ -17,7 +12,6 @@
 .login-content{
 	display: flex;
 	flex-direction: column;
-	width: 368px;
 	gap: 44px;
 }
 
@@ -33,12 +27,12 @@
 	border-radius: 20px;
 	width: 100%;
 	background-color: #FFFF;
-	padding: 24px 0px;
+	padding: 24px;
 	gap: 32px;
 	
 	:global{
 		.ant-input{
-			width: 320px;
+			width: 100%;
 			height: 48px;
 			border-radius: 16px;
 			background: rgba(22, 22, 26, 0.04);
@@ -46,11 +40,13 @@
 		}
 		
 		.ant-btn{
-			width: 320px;
+			padding: 0 140px;
+			width: 100%;
 			height: 48px;
 			border-radius: 10px;
 			font-weight: 600;
 			font-size: 16px;
+			margin-top: 8px;
 		}
 	}
 }
@@ -67,29 +63,18 @@
 	gap: 24px;
 }
 
-.account-input{
+.form-input{
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
 }
 
-.account-input-title{
-	font-weight: 500;
+.input-title{
 	font-size: 15px;
 	line-height: 22px;
 	color: #16161A;
 }
 
 
-.password-input{
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
-}
 
-.password-input-title{
-	font-weight: 500;
-	font-size: 15px;
-	line-height: 22px;
-	color: #16161A;
-}
+
