--- a/packages/overseas-payment-merchant-background-admin/src/pages/login--/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/login--/index.module.less
@@ -32,7 +32,7 @@
 	
 	:global{
 		.ant-input{
-			width: 100%;
+			width: 320px;
 			height: 48px;
 			border-radius: 16px;
 			background: rgba(22, 22, 26, 0.04);
@@ -46,7 +46,6 @@
 			border-radius: 10px;
 			font-weight: 600;
 			font-size: 16px;
-			margin-top: 8px;
 		}
 	}
 }
