--- a/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
@@ -4,6 +4,7 @@
 	height: fit-content;
 	padding: 24px 0;
 	background: #FFFF;
+	border-radius: 8px;
 }
 
 
@@ -83,6 +84,7 @@
 		.declare {
 			font-size: 12px;
 			font-weight: 400;
+			color: dimgray;
 		}
 		
 		:first-child {
