--- a/packages/overseas-payment-cashier/src/pages/Cashier/index.module.less
+++ b/packages/overseas-payment-cashier/src/pages/Cashier/index.module.less
@@ -31,7 +31,7 @@
 	.number{
 		display: flex;
 		align-items: baseline;
-		font-weight: 590;
+		font-weight: 600;
 		font-size: 48px;
 		line-height: 1.4;
 		color: #0070F3;
@@ -105,4 +105,12 @@
 	svg{
 		flex: 1;
 	}
+}
+
+.transform{
+	position: fixed;
+	top: 6px;
+	right: 6px;
+	display: flex;
+	gap: 6px;
 }
