style: 收银台适配

--- a/packages/overseas-payment-cashier/src/styles/main.module.less
+++ b/packages/overseas-payment-cashier/src/styles/main.module.less
@@ -4,11 +4,13 @@
 		padding: 0;
 		height: 100%;
 		width: 100%;
-		font-family: inter, sans-serif, "Microsoft YaHei UI"
+		//font-family: inter, sans-serif, "Microsoft YaHei UI"
+		font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif, "Roboto";
 	}
 	
 	* {
-		font-family: inter, sans-serif, "Microsoft YaHei UI"
+		//font-family: inter, sans-serif, "Microsoft YaHei UI"
+		font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif, "Roboto";
 	}
 	
 	//todo
