--- a/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
@@ -12,7 +12,7 @@
 	margin-bottom: 16px;
 	
 	:global{
-		.ant-btn{
+		.ant-btn.ant-btn-primary{
 			display: flex;
 			align-items: center;
 			padding: 0 17px;
