style: 收银台页面样式调整 收银台页面适配调整 商户后台部分实现响应式布局

--- a/packages/overseas-payment-cashier/src/pages/Cashier/index.module.less
+++ b/packages/overseas-payment-cashier/src/pages/Cashier/index.module.less
@@ -1,22 +1,28 @@
-html{
-	font-size: calc(100vw/375);
+@media screen and (min-width: 800px){
+	html{
+		font-size: calc(480px/375);
+	}
 }
 
+@media screen and (max-width: 800px) {
+	html{
+		font-size: calc(100vw/375);
+	}
+	
+}
 .cashier-container{
 	display: flex;
 	flex-direction: column;
 	padding: 16rem 16rem 32rem 16rem;
-	max-width: 800px;
+	max-width: 480px;
 	margin: auto;
+	align-items: center;
+	justify-content: center;
 }
 
 .header{
-	display: flex;
-	align-items: center;
-	svg{
-		width: 64rem;
-		height: 16rem;
-	}
+	width: 64rem;
+	height: 16rem;
 }
 
 .amount{
@@ -28,9 +34,9 @@ html{
 	
 	.time{
 		font-weight: 500;
-		font-size: 18rem;
+		font-size: 14rem;
 		line-height: 1.4;
-		color: rgba(22, 22, 26, 0.8);
+		color: rgba(22, 22, 26, 0.6);
 	}
 	
 	.number{
@@ -55,22 +61,21 @@ html{
 	gap: 24rem;
 }
 
-.orderId{
+.order-id{
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	width: 100%;
 	
 	.order-id-title{
 		font-weight: 400;
 		font-size: 13rem;
-		line-height: 6rem;
 		color: rgba(22, 22, 26, 0.6);
 	}
 	
 	.id-text{
 		font-weight: 400;
 		font-size: 13rem;
-		line-height: 6rem;
 		color: #16161A;
 	}
 }
@@ -87,7 +92,7 @@ html{
 
 .qr-code{
 	width: 240rem;
-	max-width: 500px;
+	max-width: 800px;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -124,4 +129,59 @@ html{
 
 .transform-btn{
 	font-size: 12rem;
+}
+
+.result-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 8rem;
+	gap: 24rem;
+	
+	svg{
+		width: 249rem;
+		height: 150rem;
+	}
+}
+
+.result-text{
+	font-weight: 500;
+	font-size: 16rem;
+	text-align: center;
+	color: #16161A;
+}
+
+.default-info-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	gap: 24rem;
+}
+
+.copyed{
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 24rem;
+	width: 136rem;
+	height: 136rem;
+	//top: 288rem;
+	//left: 120rem;
+	background: rgba(22, 22, 26, 0.8);
+	border-radius: 12rem;
+	
+	svg{
+		width: 34rem;
+		height: 25rem;
+	}
+	
+	.copyed-text{
+		font-weight: 400;
+		font-size: 17rem;
+		text-align: center;
+		color: #FFFFFF;
+	}
 }
