--- a/packages/overseas-payment-merchant-background-admin/src/pages/Collection-Order/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Collection-Order/index.module.less
@@ -1,3 +1,10 @@
+@media screen and (max-width: 850px) {
+	:global(.ant-form-inline){
+		flex-direction: column;
+		gap: 16px;
+	}
+}
+
 .search-container {
 	padding: 24px;
 	background-color: #ffffff;
