--- a/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Home/index.module.less
@@ -1,4 +1,8 @@
-
+@media screen and (max-width: 700px){
+	.order-type-overview{
+		flex-direction: column;
+	}
+}
 
 .overview-container{
 	display: flex;
@@ -78,7 +82,6 @@
 
 .order-type-overview{
 	display: flex;
-	flex-direction: row;
 	padding: 0px;
 	gap: 24px;
 	width: 100%;
