--- a/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
@@ -1,7 +1,17 @@
+@media screen and (min-width: 900px) {
+	.reset-password-container{
+		:global{
+			.ant-input{
+				width: 464px;
+			}
+		}
+	}
+}
+
 .profile{
 	display: flex;
 	width: 100%;
-	padding: 24px 0;
+	padding: 24px 24px 24px 0;
 	background: #FFFF;
 	border-radius: 8px;
 }
@@ -21,7 +31,6 @@
 	
 	:global{
 		.ant-input{
-			width: 464px;
 			height: 48px;
 			background: rgba(22, 22, 26, 0.04);
 			border-radius: 16px;
