--- a/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
@@ -1,3 +1,9 @@
+@media screen and (max-width: 700px){
+	:global(.ant-layout-sider){
+		display: none;
+	}
+}
+
 .content-wrap {
 	background-color : rgb(245,245,245);
 	height : calc(100vh - 48px);
