--- a/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
@@ -2,18 +2,20 @@
 	background-color : rgb(245,245,245);
 	height : calc(100vh - 48px);
 	overflow-y : hidden;
+	display: flex;
+	flex-direction: column;
 	
 	.content-space {
 		width : 100%;
-		height : 98px;
 		background-color : #fff;
 		padding : 16px 32px;
 	}
 	
 	.content-gray-bg {
 		width : 100%;
+		flex: 1 ;
 		padding : 24px;
-		height : 100%;
+		box-sizing: border-box;
 		overflow-y : scroll;
 	}
 	
