--- a/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
@@ -96,6 +96,10 @@
 }
 
 .order-type-title{
+	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;
 	font-weight: 500;
 	font-size: 18px;
 	line-height: 24px;
