--- a/packages/overseas-payment-merchant-background-admin/src/pages/--Components--/New-Payment/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/--Components--/New-Payment/index.module.less
@@ -26,7 +26,7 @@
 	display: flex;
 	width: 100%;
 	flex-direction: column;
-	gap: 8px;
+	gap: 24px;
 }
 
 .bank-car-transfer-container{
@@ -39,6 +39,12 @@
 .input-form{
 	display: flex;
 	width: 100%;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.pp-input-form{
+	display: flex;
 	flex-direction: column;
 	gap: 8px;
 }
