--- a/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
@@ -12,7 +12,7 @@
 	margin-bottom: 16px;
 	
 	:global{
-		.ant-btn.ant-btn-primary{
+		.ant-btn.ant-btn-primary:nth-child(2){
 			display: flex;
 			align-items: center;
 			padding: 0 17px;
@@ -28,16 +28,4 @@
 	font-size: 18px;
 	line-height: 24px;
 	color: #000000;
-}
-
-.table-action{
-	:global{
-		.ant-btn:nth-child(1){
-			color: #0070F3;
-		}
-		
-		.ant-btn:nth-child(2){
-			color: #F21361;
-		}
-	}
 }
