--- a/packages/overseas-payment-merchant-background-admin/src/pages/--Components--/Layout-Header/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/--Components--/Layout-Header/index.module.less
@@ -17,10 +17,14 @@
 			display: flex;
 			align-items: center;
 			margin-right: 24px;
-			width: 200px;
 			
 			span {
 				margin-left: 8px;
+			}
+			
+			.time-now {
+				width: 80px;
+				margin-left: 16px;
 			}
 		}
 		
