--- a/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Payment-Mgnt/index.module.less
@@ -12,7 +12,7 @@
 	margin-bottom: 16px;
 	
 	:global{
-		.ant-btn.ant-btn-primary:nth-child(2){
+		.ant-btn.ant-btn-primary{
 			display: flex;
 			align-items: center;
 			padding: 0 17px;
@@ -20,6 +20,25 @@
 			background: #0070F3;
 			border-radius: 12px;
 			gap: 14px;
+		}
+		
+		.ant-btn.ant-btn-primary:first-child{
+			padding: 0px 20px;
+			gap: 10px;
+			background: #B7D5F8;
+			color: #0070F3;
+			border-color: #b7d5f8;
+		}
+		
+		.ant-btn.ant-btn-default.ant-btn-dangerous{
+			display: flex;
+			align-items: center;
+			border-radius: 12px;
+			padding: 0 20px;
+			height: 40px;
+			background: #FCC5D8;
+			border-color: #fcc5d8;
+			color: #F21361;;
 		}
 	}
 }
