style: 主页提现页面样式修改

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
@@ -245,6 +245,12 @@
 		width: 465px;
 		margin: 0 auto;
 		
+		.withdraw-title{
+			font-weight: 600;
+			font-size: 22px;
+			line-height: 28px;
+		}
+		
 		.deposit-title{
 			display: flex;
 			flex-direction: column;
@@ -267,6 +273,13 @@
 			gap: 8px;
 			font-weight: 600;
 			
+			.max-withdraw-amount{
+				font-weight: 500;
+				font-size: 13px;
+				line-height: 16px;
+				color: rgba(22, 22, 26, 0.8);
+			}
+			
 			.withdraw-btn{
 				font-weight: 500;
 				font-size: 13px;
@@ -278,6 +291,8 @@
 		}
 		
 		.address {
+			display: flex;
+			flex-direction: column;
 			padding: 0;
 			gap: 8px;
 			font-size: 14px;
