fix: 主页充值页面调整

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
@@ -252,8 +252,6 @@
 		}
 		
 		.deposit-title{
-			display: flex;
-			flex-direction: column;
 			font-weight: 600;
 			font-size: 22px;
 			line-height: 28px;
@@ -261,6 +259,7 @@
 		
 		.deposit-title::after{
 			content: '账户实际到账余额以实时美金汇率为准';
+			display: block;
 			font-weight: 500;
 			font-size: 13px;
 			line-height: 16px;
