fix: 提现充值title class名

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
@@ -245,13 +245,7 @@
 		width: 465px;
 		margin: 0 auto;
 		
-		.withdraw-title{
-			font-weight: 600;
-			font-size: 22px;
-			line-height: 28px;
-		}
-		
-		.deposit-title{
+		.title{
 			font-weight: 600;
 			font-size: 22px;
 			line-height: 28px;
