style: menu菜单样式调整

--- a/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
@@ -41,12 +41,10 @@
 
 .sider-menu-container{
 	:global{
-		.ant-menu-item{
-			gap: 16px;
-		}
-		
-		.ant-menu-submenu-title{
-			gap: 16px;
+		.ant-menu-item,.ant-menu-submenu,.ant-menu-item-selected {
+			.ant-menu-title-content {
+				padding-left: 16px;
+			}
 		}
 		
 	}
