fix: 新增一些pending状态

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
@@ -81,6 +81,15 @@
 	margin-bottom: 8px;
 }
 
+.spinWrapper {
+	:global {
+		.ant-spin-blur {
+			opacity: 0.2;
+			
+		}
+	}
+}
+
 .base-info {
 	.info-item {
 		display: flex;
