--- a/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Overview/index.module.less
@@ -9,6 +9,11 @@
 	flex-direction: column;
 	align-items: flex-start;
 	gap: 32px;
+	padding: 24px;
+	width: 100%;
+	background-color: #FFFFFF;
+	margin-bottom: 20px;
+	border-radius: 8px;
 
 	
 	:global{
@@ -226,6 +231,15 @@
 	font-size: 16px;
 	line-height: 1.4;
 	color: #16161A;
+}
+
+.loading-spin {
+	width: 100%;
+	background-color: #ffffff;
+	border-radius: 8px;
+	min-height: 300px;
+	text-align: center;
+	line-height: 300px;
 }
 
 .withdraw-container {
