fix: 滚动条样式调整

--- a/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/styles/layout.module.less
@@ -35,8 +35,24 @@
 	
 }
 
-::-webkit-scrollbar {
-	display: none;
+.layout-global::-webkit-scrollbar {
+	width: 2px;
+	height: 10px;
+	&:hover {
+		width: 3px;
+	}
+}
+
+.layout-global::-webkit-scrollbar-thumb {
+	background: #d9d9d9;
+	border-radius: 10px;
+	border-color: transparent;
+}
+
+.layout-global::-webkit-scrollbar-thumb:hover {
+	background: #333333;
+	width: 6px;
+	border: 1px solid #333333;
 }
 
 .sider-menu-container{
