fix: 设置api部分样式调整&操作记录绑定timezone

--- a/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Profile/index.module.less
@@ -115,6 +115,13 @@
 			margin-left: 4px;
 			cursor: pointer;
 		}
+		
+		:global {
+			.ant-col {
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
 	}
 	
 	.base-info-title{
