--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Overview/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Overview/index.module.less
@@ -4,85 +4,67 @@
 	}
 }
 
-.overview-container{
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	gap: 32px;
-	padding: 24px;
-	width: 100%;
-	background-color: #FFFFFF;
-	margin-bottom: 20px;
-	border-radius: 8px;
 
+p{
+	margin: 0;
+}
+
+.overview-info {
+	display: flex;
+	gap: 24px;
 	
-	:global{
-		.ant-btn.ant-btn-primary{
-			width: 97px;
-			height: 32px;
-			background: #1677FF;
-			border-radius: 4px;
-		}
-	}
-	
-	
-	.overview-title{
-		font-weight: 500;
-		font-size: 18px;
-		line-height: 24px;
-		color: #16161A;
-	}
-	
-	.overview-content{
+	.overview-container {
 		display: flex;
 		flex-direction: column;
-		gap: 24px;
+		justify-content: space-between;
+		gap: 32px;
+		height: 268px;
+		padding: 24px;
+		width: 100%;
+		background-color: #ffffff;
+		margin-bottom: 20px;
+		border-radius: 8px;
 		
-		.overview-sub-title{
-			font-weight: 500;
+		
+		:global {
+			.ant-btn.ant-btn-primary {
+				width: 97px;
+				height: 32px;
+				background: #1677ff;
+				border-radius: 4px;
+			}
+		}
+		
+		.overview-sub-title {
 			font-size: 14px;
 			line-height: 1.4;
 			color: rgba(22, 22, 26, 0.6);
 		}
 		
-		.balance-container{
-			display: flex;
-			align-items: flex-end;
-			gap: 24px;
-			
-			.balance-content{
-				display: flex;
-				flex-direction: column;
-				
-				.balance-amount{
-					font-weight: 500;
-					font-size: 48px;
-					line-height: 61px;
-					color: #16161A;
-				}
-				
-			}
-			
-			.check-detail{
-				font-weight: 500;
-				color: #1677FF;
-			}
-		}
-
-		.withdraw-content{
-			display: flex;
-			flex-direction: column;
-			
-			.withdrawing-amount{
-				font-weight: 500;
-				font-size: 28px;
-				line-height: 140%;
-				color: #16161A;
-			}
+		.withdrawing-amount {
+			font-size: 28px;
+			line-height: 140%;
+			color: #16161a;
 		}
 		
+		
+		.balance-amount {
+			font-size: 48px;
+			line-height: 61px;
+			color: #16161a;
+			margin-right: 24px;
+		}
+		
+		
+		.overview-title {
+			font-size: 18px;
+			line-height: 24px;
+			color: #16161a;
+		}
 	}
 }
+
+
 
 .order-type-overview{
 	display: flex;
