--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Auth/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Auth/index.module.less
@@ -1,78 +1,67 @@
-.login-wrapper{
+h1, h2, h3, h4, h5, h6 {
+	margin: 0;
+}
+
+.login-wrapper {
 	display: flex;
-	align-items: center;
-	justify-content: center;
 	width: 100%;
 	height: 100%;
 	min-height: 700px;
 	background-repeat: no-repeat;
 	background-size: cover;
-}
-
-.login-content{
-	display: flex;
-	flex-direction: column;
-	gap: 44px;
-}
-
-.login-title{
-	display: flex;
-	justify-content: center;
-}
-
-.sign-in-form-wrapper{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	border-radius: 20px;
-	width: 100%;
-	background-color: #FFFF;
-	padding: 24px;
-	gap: 32px;
 	
-	:global{
-		.ant-input{
-			width: 320px;
-			height: 48px;
-			border-radius: 16px;
-			background: rgba(22, 22, 26, 0.04);
-			border: unset;
+	.login-content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 44px;
+		margin: auto;
+	}
+	
+	.sign-in-form-wrapper {
+		display: flex;
+		flex-direction: column;
+		border-radius: 20px;
+		width: 100%;
+		background-color: #ffff;
+		padding: 24px;
+		
+		.form-title {
+			font-size: 18px;
+			font-weight: 600;
+			margin-bottom: 24px;
 		}
 		
-		.ant-btn{
-			padding: 0 140px;
-			width: 100%;
-			height: 48px;
-			border-radius: 10px;
-			font-weight: 600;
-			font-size: 16px;
+		.input-title {
+			font-size: 15px;
+			margin-bottom: 8px;
+		}
+		
+		:global {
+			.ant-input {
+				width: 320px;
+				height: 48px;
+				border-radius: 16px;
+				background: rgba(22, 22, 26, 0.04);
+				border: unset;
+				margin-bottom: 24px;
+			}
+			
+			
+			.ant-btn {
+				padding: 0 140px;
+				width: 100%;
+				height: 48px;
+				border-radius: 10px;
+				font-weight: 600;
+				font-size: 16px;
+				margin-top: 8px;
+			}
 		}
 	}
+	
 }
 
-.form-title{
-	font-size: 18px;
-	font-weight: 600;
-	color: #171725;
-}
-
-.input-section{
-	display: flex;
-	flex-direction: column;
-	gap: 24px;
-}
-
-.form-input{
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
-}
-
-.input-title{
-	font-size: 15px;
-	line-height: 22px;
-	color: #16161A;
-}
 
 
 
