fix: 新增成员跳转

--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Mgnt-List/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Mgnt-List/index.module.less
@@ -11,6 +11,10 @@
 	background: #ffffff;
 	border-radius: 8px;
 	
+	.blue-link {
+		padding: 0;
+	}
+	
 	.table-title-bar {
 		display: flex;
 		justify-content: space-between;
