--- a/packages/overseas-payment-merchant-operation-platform/src/pages/--Components--/Layout-Header/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/--Components--/Layout-Header/index.module.less
@@ -13,6 +13,10 @@
 		display: flex;
 		align-items: center;
 		
+		:global(.ant-dropdown-trigger){
+			cursor: pointer;
+		}
+		
 		.header-time {
 			display: flex;
 			align-items: center;
