--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Withdraw-Rqst/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Withdraw-Rqst/index.module.less
@@ -1,4 +1,4 @@
-.deposit-modal{
+.withdraw-modal{
 	:global{
 		.ant-modal-content{
 			padding: 32px;
@@ -14,21 +14,30 @@
 			padding: 0;
 			margin-top: 24px;
 		}
+		
+		.ant-modal-title{
+			font-weight: 600;
+			font-size: 22px;
+		}
 	}
 }
 
-.content-container{
+.content-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	
-	.add-amount{
+	.withdraw-amount{
+		font-weight: 600;
+		font-size: 12px;
+		color: rgba(22, 22, 26, 0.8);
+	}
+	
+	.form-input{
 		width: 100%;
 		text-align: left;
 		margin-bottom: 8px;
 	}
-	
- 
 	
 	.number{
 		font-weight: 600;
@@ -38,32 +47,8 @@
 		
 		.unit{
 			font-size: 16px;
-			margin-left: 6px;
+			margin-right: 6px;
 		}
-	}
-	
-	.check-amount{
-		display: flex;
-		justify-content: space-between;
-		width: 100%;
-		font-size: 16px;
-	}
-	
-	.color-grey{
-		color: rgba(22, 22, 26, 0.6);
-	}
-	
-	.alert-box{
-		display: flex;
-		align-items: center;
-		padding: 24px;
-		gap: 18px;
-		width: 100%;
-		font-size: 16px;
-		color: #F21361;
-		background: rgba(239, 70, 111, 0.08);
-		border-radius: 8px;
-		margin-top: 24px;
 	}
 	
 	:global{
@@ -82,26 +67,5 @@
 			margin-top: 24px;
 			margin-bottom: 14px;
 		}
-		
-		.ant-divider-horizontal{
-			margin: 12px 0;
-		}
-		
 	}
-}
-
-.title{
-	font-weight: 600;
-	font-size: 22px;
-	margin-bottom: 8px;
-	
-	svg{
-		cursor: pointer;
-	}
-}
-
-.flex{
-	display: flex;
-	align-items: center;
-	gap: 16px;
 }
