--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Mgnt-Create&Edit/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Mgnt-Create&Edit/index.module.less
@@ -7,10 +7,15 @@
 	//flex-direction: column;
 	//align-items: center;
 	
+	:global(.ant-form-item-label > label) {
+		width: 100%;
+	}
+	
 	.change-set {
-		position: absolute;
-		right: 0;
-		top: -35px;
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
 	}
 	.mch-Switch {
 		display: flex;
