--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Deposit-Rqst/inde.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Deposit-Rqst/inde.module.less
@@ -1,3 +1,21 @@
+.table-container{
+	width: 100%;
+	box-sizing: border-box;
+	padding: 24px;
+	background-color: #ffffff;
+	border-radius: 8px;
+	
+	
+	.table-header{
+		margin-bottom: 16px;
+		font-size: 18px;
+		color: #000000;
+	}
+	
+}
+
+
+// 充值弹窗
 .deposit-modal{
 	:global{
 		.ant-modal-content{
@@ -15,93 +33,99 @@
 			margin-top: 24px;
 		}
 	}
-}
-
-.content-container{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	
-	.add-amount{
-		width: 100%;
-		text-align: left;
-		margin-bottom: 8px;
-	}
-	
- 
-	
-	.number{
+	.title{
 		font-weight: 600;
-		font-size: 36px;
-		color: #0070F3;
-		margin-bottom: 24px;
+		font-size: 22px;
+		margin-bottom: 8px;
 		
-		.unit{
-			font-size: 16px;
-			margin-left: 6px;
+		svg{
+			cursor: pointer;
 		}
 	}
 	
-	.check-amount{
-		display: flex;
-		justify-content: space-between;
-		width: 100%;
-		font-size: 16px;
-	}
-	
-	.color-grey{
-		color: rgba(22, 22, 26, 0.6);
-	}
-	
-	.alert-box{
+	.flex{
 		display: flex;
 		align-items: center;
-		padding: 24px;
-		gap: 18px;
-		width: 100%;
-		font-size: 16px;
-		color: #F21361;
-		background: rgba(239, 70, 111, 0.08);
-		border-radius: 8px;
-		margin-top: 24px;
+		gap: 16px;
 	}
 	
-	:global{
-		.ant-input{
-			height: 48px;
-			border-radius: 16px;
-		}
+	.content-container{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		
-		.ant-btn{
+		.add-amount{
 			width: 100%;
-			height: 48px;
-			border-radius: 12px;
+			text-align: left;
+			margin-bottom: 8px;
 		}
 		
-		.ant-btn.ant-btn-primary{
+		
+		
+		.number{
+			font-weight: 600;
+			font-size: 36px;
+			color: #0070F3;
+			margin-bottom: 24px;
+			
+			.unit{
+				font-size: 16px;
+				margin-left: 6px;
+			}
+		}
+		
+		.check-amount{
+			display: flex;
+			justify-content: space-between;
+			width: 100%;
+			font-size: 16px;
+		}
+		
+		.color-grey{
+			color: rgba(22, 22, 26, 0.6);
+		}
+		
+		.alert-box{
+			display: flex;
+			align-items: center;
+			padding: 24px;
+			gap: 18px;
+			width: 100%;
+			font-size: 16px;
+			color: #F21361;
+			background: rgba(239, 70, 111, 0.08);
+			border-radius: 8px;
 			margin-top: 24px;
-			margin-bottom: 14px;
 		}
 		
-		.ant-divider-horizontal{
-			margin: 12px 0;
+		:global{
+			.ant-input{
+				height: 48px;
+				border-radius: 16px;
+			}
+			
+			.ant-btn{
+				width: 100%;
+				height: 48px;
+				border-radius: 12px;
+			}
+			
+			.ant-btn.ant-btn-primary{
+				margin-top: 24px;
+				margin-bottom: 14px;
+			}
+			
+			.ant-divider-horizontal{
+				margin: 12px 0;
+			}
+			
 		}
-		
 	}
-}
-
-.title{
-	font-weight: 600;
-	font-size: 22px;
-	margin-bottom: 8px;
 	
-	svg{
-		cursor: pointer;
-	}
+	
 }
 
-.flex{
-	display: flex;
-	align-items: center;
-	gap: 16px;
-}
+
+
+
