fix: 各订单列表数据调整

--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Collection-Order/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Collection-Order/index.module.less
@@ -17,13 +17,18 @@
 	padding: 24px;
 	background-color: #ffffff;
 	border-radius: 8px;
+	
+	.table-header{
+		margin-bottom: 16px;
+		font-size: 18px;
+		color: #000000;
+	}
+	
+	.udstNum {
+	
+	}
 }
 
-.table-header{
-	margin-bottom: 16px;
-	font-size: 18px;
-	color: #000000;
-}
 
 .order-process-title{
 	display: flex;
