style: 商户管理 新建/编辑 布局修改

--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Mgnt-Create&Edit/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Mgnt-Create&Edit/index.module.less
@@ -1,4 +1,6 @@
 .edit-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 	width: 100%;
 	background-color: #ffffff;
 	border-radius: 8px;
