--- a/packages/overseas-payment-merchant-background-admin/src/pages/Auth/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Auth/index.module.less
@@ -49,8 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 			
 			
 			.ant-btn {
-				padding: 0 140px;
-				width: 100%;
+				width: 320px;
 				height: 48px;
 				border-radius: 10px;
 				font-weight: 600;
